# Sanskrit_RAG

./: .gitignore  README.md  check_imports.py  inspect_langchain.py  main.py  pyproject.toml  setup.sh
code/: app.py  download_model.py  ingest.py  rag_pipeline.py  verify_rag.py
data/: sanskrit_stories.txt
report/: technical_report.md
