[project]
name = "rag"
version = "0.1.0"
description = "Sanskrit RAG System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.1",
    "langchain==0.3.13",
    "langchain-community==0.3.13",
    "llama-cpp-python>=0.3.16",
    "pypdf>=6.5.0",
    "sentence-transformers",
    "streamlit>=1.52.2",
]
